--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -1,10 +1,10 @@
-<div class="fondo container-fluid">
+<!--<div class="fondo container-fluid">
     <section id="showcase">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-6">
                     <div class="showcase-left">
-                        <!--<img src="https://media.giphy.com/media/AVgVoizvG6IBa/giphy.gif" alt="video"></img>-->
+                        &lt;!&ndash;<img src="https://media.giphy.com/media/AVgVoizvG6IBa/giphy.gif" alt="video"></img>&ndash;&gt;
                         <img src="https://ih0.redbubble.net/image.29497206.8072/sticker,375x360-bg,ffffff.u4.png" alt="relaaax">
                     </div>
                 </div>
@@ -42,7 +42,7 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="info-right">
                         <h2>Tus artistas favoritos!</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero, vitae officiis. Voluptas similique voluptates quia accusamus!</p>
+                        <p></p>
                         <br>
                         <a href="#" class="btn btn-default btn-lg"> Mas info!</a>
                     </div>
@@ -77,7 +77,7 @@
             <div class="row">
                 <div class="col-md-5 col-sm-5">
                     <div class="container">
-                        <!-- Trigger the modal with a button -->
+                        &lt;!&ndash; Trigger the modal with a button &ndash;&gt;
                         <div class="row">
                             <div class="col-sm-5 col-md-5"></div>
                             <div class="col-sm-2 col-md-2">
@@ -87,11 +87,11 @@
                         </div>
 
 
-                        <!-- Modal -->
+                        &lt;!&ndash; Modal &ndash;&gt;
                         <div class="modal fade" id="myModal" role="dialog">
                             <div class="modal-dialog">
 
-                                <!-- Modal content-->
+                                &lt;!&ndash; Modal content&ndash;&gt;
                                 <div class="modal-content">
                                     <div class="modal-header" style="padding:35px 50px;">
                                         <button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -139,7 +139,7 @@
 </div>
 
 <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-<!--JS del login con modal-->
+&lt;!&ndash;JS del login con modal&ndash;&gt;
 <script>
 
     /*JS del SR*/
@@ -222,5 +222,176 @@
                 }
             }
         });
-</script>
+</script>-->
+
+<div id="fh5co-main">
+    <aside id="fh5co-hero" class="js-fullheight">
+        <div class="flexslider js-fullheight" >
+            <ul class="slides">
+                <li>
+                    <img class="image" src="../../content/images/wallpaper-conciertos.jpg" width="100%" height="100%">
+                    <div class="overlay"></div>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
+                                <div class="slider-text-inner">
+                                    <h1>Tu música <strong></strong> al alcance de un click todos tus conciertos</h1>
+                                    <h2>Accede y comprueba <a href="http://freehtml5.co/" target="_blank">PuigTheSong</a></h2>
+                                    <p><a class="btn btn-primary btn-demo popup-vimeo" href=""> <i class="icon-monitor"></i> Live Preview</a> <a class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <img class="image" src="../../content/images/wallpaper-ticket.jpg" width="100%" height="100%">
+                    <div class="overlay"></div>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
+                                <div class="slider-text-inner">
+                                    <h1>Encuentra las entradas de tus conciertos</h1>
+                                    <h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+                                    <p><a class="btn btn-primary btn-demo popup-vimeo" href="https://vimeo.com/channels/staffpicks/93951774"> <i class="icon-monitor"></i> Live Preview</a> <a class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <img class="image" src="../../content/images/wallpaper-discos.jpg" width="100%" height="100%">
+                    <div class="overlay"></div>
+                    <div class="container-fluid">
+                        <div class="row">
+                            <div class="col-md-8 col-md-offset-2 text-center js-fullheight slider-text">
+                                <div class="slider-text-inner">
+                                    <h1>Download our Free HTML5 Bootstrap Template</h1>
+                                    <h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank"> PuigTheSong</a></h2>
+                                    <p><a class="btn btn-primary btn-demo popup-vimeo" href="https://vimeo.com/channels/staffpicks/93951774"> <i class="icon-monitor"></i> Live Preview</a> <a class="btn btn-primary btn-learn">Learn More<i class="icon-arrow-right3"></i></a></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </aside>
+
+    <div id="fh5co-narrow-content">
+        <h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Services</h2>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
+                    <div class="fh5co-icon">
+                        <i class="icon-settings"></i>
+                    </div>
+                    <div class="fh5co-text">
+                        <h3>Strategy</h3>
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
+                    <div class="fh5co-icon">
+                        <i class="icon-search4"></i>
+                    </div>
+                    <div class="fh5co-text">
+                        <h3>Explore</h3>
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-6">
+                <div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
+                    <div class="fh5co-icon">
+                        <i class="icon-paperplane"></i>
+                    </div>
+                    <div class="fh5co-text">
+                        <h3>Direction</h3>
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
+                    <div class="fh5co-icon">
+                        <i class="icon-params"></i>
+                    </div>
+                    <div class="fh5co-text">
+                        <h3>Expertise</h3>
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="fh5co-narrow-content">
+        <h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">Recent Blog</h2>
+        <div class="row row-bottom-padded-md">
+            <div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+                <div class="blog-entry">
+                    <a href="#" class="blog-img"><img src="" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+                    <div class="desc">
+                        <h3><a href="#">Inspirational Website</a></h3>
+                        <span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
+                        <p>Design must be functional and functionality must be translated into visual aesthetics</p>
+                        <a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+                <div class="blog-entry">
+                    <a href="#" class="blog-img"><img src="" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+                    <div class="desc">
+                        <h3><a href="#">Inspirational Website</a></h3>
+                        <span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
+                        <p>Design must be functional and functionality must be translated into visual aesthetics</p>
+                        <a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+                <div class="blog-entry">
+                    <a href="#" class="blog-img"><img src="" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+                    <div class="desc">
+                        <h3><a href="#">Inspirational Website</a></h3>
+                        <span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
+                        <p>Design must be functional and functionality must be translated into visual aesthetics</p>
+                        <a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3 col-sm-6 col-padding animate-box" data-animate-effect="fadeInLeft">
+                <div class="blog-entry">
+                    <a href="#" class="blog-img"><img src="" class="img-responsive" alt="Free HTML5 Bootstrap Template by FreeHTML5.co"></a>
+                    <div class="desc">
+                        <h3><a href="#">Inspirational Website</a></h3>
+                        <span><small>by Admin </small> / <small> Web Design </small> / <small> <i class="icon-comment"></i> 14</small></span>
+                        <p>Design must be functional and functionality must be translated into visual aesthetics</p>
+                        <a href="#" class="lead">Read More <i class="icon-arrow-right3"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="get-in-touch">
+        <div class="fh5co-narrow-content">
+            <div class="row">
+                <div class="col-md-4 animate-box" data-animate-effect="fadeInLeft">
+                    <h1 class="fh5co-heading-colored">Get in touch</h1>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
+                    <p class="fh5co-lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                    <p><a href="#" class="btn btn-primary">Learn More</a></p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</div>
 
