--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -6,6 +6,6 @@
     <div>
         <router-outlet></router-outlet>
         <router-outlet name="popup"></router-outlet>
-    <jhi-footer></jhi-footer>
+        <!--<jhi-footer></jhi-footer>-->
     </div>
 </div>
