--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -1,3 +1,4 @@
+<!--
 <nav class="navbar navbar-dark navbar-expand-md jh-navbar">
     <div class="jh-logo-container float-left">
         <a class="jh-navbar-toggler d-lg-none float-right" href="javascript:void(0);" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation" (click)="toggleNavbar()">
@@ -32,7 +33,7 @@
                                 <span jhiTranslate="global.menu.prueba-fromulario">Prueba Fromulario</span>
                             </a>
                         </li>
-                        <!-- jhipster-needle-add-element-to-prueba - JHipster will add elements to the prueba here -->
+                        &lt;!&ndash; jhipster-needle-add-element-to-prueba - JHipster will add elements to the prueba here &ndash;&gt;
                     </ul>
                 </li>
             <li *ngSwitchCase="true" ngbDropdown class="nav-item dropdown pointer">
@@ -49,7 +50,7 @@
                             <span jhiTranslate="global.menu.pagehome-phome">Home</span>
                         </a>
                     </li>
-                    <!-- jhipster-needle-add-element-to-pagehome - JHipster will add elements to the pagehome here -->
+                    &lt;!&ndash; jhipster-needle-add-element-to-pagehome - JHipster will add elements to the pagehome here &ndash;&gt;
 
                     <li>
                         <a class="dropdown-item" routerLink="pageartist-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
@@ -82,9 +83,9 @@
                 </ul>
             </li>
 
-            <!--<li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">-->
+            &lt;!&ndash;<li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">&ndash;&gt;
 
-            <!-- jhipster-needle-add-element-to-menu - JHipster will add new menu items here -->
+            &lt;!&ndash; jhipster-needle-add-element-to-menu - JHipster will add new menu items here &ndash;&gt;
             <li *ngSwitchCase="true" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
                 <a class="nav-link dropdown-toggle" ngbDropdownToggle href="javascript:void(0);" id="entity-menu">
                     <span>
@@ -191,7 +192,7 @@
                             <span jhiTranslate="global.menu.entities.collectionsTicketMaster">Collections Ticket Master</span>
                         </a>
                     </li>
-                    <!-- jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here -->
+                    &lt;!&ndash; jhipster-needle-add-entity-to-menu - JHipster will add entities to the menu here &ndash;&gt;
                 </ul>
             </li>
             <li *jhiHasAnyAuthority="'ROLE_ADMIN'" ngbDropdown class="nav-item dropdown pointer" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">
@@ -244,7 +245,7 @@
                             <span jhiTranslate="global.menu.admin.apidocs">API</span>
                         </a>
                     </li>
-                    <!-- jhipster-needle-add-element-to-admin-menu - JHipster will add entities to the admin menu here -->
+                    &lt;!&ndash; jhipster-needle-add-element-to-admin-menu - JHipster will add entities to the admin menu here &ndash;&gt;
                 </ul>
             </li>
             <li ngbDropdown class="nav-item dropdown pointer" *ngIf="languages">
@@ -308,3 +309,50 @@
         </ul>
     </div>
 </nav>
+-->
+<!-- Sidebar-->
+<!--<nav class="navbar navbar-dark navbar-expand-md jh-navbar">-->
+    <aside  id="fh5co-aside" role="complementary" class="border js-fullheight">
+        <h1 id="fh5co-logo"><a href="index.html">PuigTheSong</a></h1>
+        <nav id="fh5co-main-menu" role="navigation">
+            <ul>
+                <li class="fh5co">
+                    <a routerLink="pagehome-phome" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                        <i class="fa fa-star-half-full" aria-hidden="true"></i>&nbsp;
+                        <span jhiTranslate="global.menu.pagehome-phome">Tendencias</span>
+                    </a>
+                </li>
+                <li class="fh5co">
+                    <a routerLink="pagesong-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                        <i class="fa fa-star-half-full" aria-hidden="true"></i>&nbsp;
+                        <span jhiTranslate="global.menu.pagesong-pages">Song</span>
+                    </a>
+                </li>
+                <li class="fh5co">
+                    <a routerLink="pageartist-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                        <i class="fa fa-star-half-full" aria-hidden="true"></i>&nbsp;
+                        <span jhiTranslate="global.menu.pageartist-pages">Pageartist Pages</span>
+                    </a>
+                </li>
+                <li class="fh5co">
+                    <a routerLink="pageconciertos-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                        <i class="fa fa-star-half-full" aria-hidden="true"></i>&nbsp;
+                        <span jhiTranslate="global.menu.pageconciertos-pages">Concert</span>
+                    </a>
+                </li>
+
+                <li class="fh5co"><a (click)="login()" id="login">Sign in</a></li>
+                <li class="fh5co"><a routerLink="register">Register</a></li>
+            </ul>
+        </nav>
+        <div class="fh5co-footer">
+            <p><small>&copy; 2018 PuigTheSong. All Rights Reserved.</span> <span>Designed by <a href="" target="_blank">Julio/Borja/Bryan/Javier/Llauna</a></span> <span>Demo Images: <a href="" target="_blank">Unsplash</a></span></small></p>
+            <ul>
+                <li><a href="#"><i class="icon-facebook2"></i></a></li>
+                <li><a href="#"><i class="icon-twitter2"></i></a></li>
+                <li><a href="#"><i class="icon-instagram"></i></a></li>
+                <li><a href="#"><i class="icon-linkedin2"></i></a></li>
+            </ul>
+        </div>
+    </aside>
+<!--</nav>-->
