--- a/src/main/webapp/app/pages/pageartist/pages.css
+++ b/src/main/webapp/app/pages/pageartist/pages.css
@@ -1,25 +1,33 @@
 
-@media only screen and (min-width: 450px) {
-    .fondo {
-        background-size: cover;
-        /*background-image: url("../../../content/images/wallpaper-conciertos-4.jpg");*/
-        background: linear-gradient(to bottom right, white, #409cff);
-    }
-    .container{
-        background-image: url("../../../content/images/wallpaper-conciertos-4.jpg");
-    }
+.fondo{
+    /*background-size: cover;*/
+    background: linear-gradient(#33b7ff,#020d1c);
+    padding-left: 25%;
 }
 
-/*.fondo{
-    background-size: cover;
-    !*background-image: url("../../../content/images/fondoTopTracks.jpg");*!
-    background: linear-gradient(to bottom right, white, #409cff);
-}*/
-
-/*.marco {
-    width: 1200px;
-    height: 800px;
-}*/
+h1{
+    color:white!important;
+}
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+    color: grey;
+    font-style: italic;
+}
+::-moz-placeholder { /* Firefox 19+ */
+    color: grey;
+    font-style: italic;
+}
+:-ms-input-placeholder { /* IE 10+ */
+    color: grey;
+    font-style: italic;
+}
+:-moz-placeholder { /* Firefox 18- */
+    color: grey;
+    font-style: italic;
+}
+.buscador{
+    width:50%;
+    padding-left: 20%;
+}
 
 .cover {
     background-size: cover;
@@ -27,13 +35,17 @@
     height: 200px;
     display: block;
     margin: 10px;
-    border: 2px solid #151515;
+    border: 2px solid white;
     position: relative;
 }
 .audio{
     align-content: center;
     margin-top: 8%;
     width: 100%;
+}
+
+.audio:hover{
+    cursor: pointer;
 }
 
 .tituloSong{
@@ -52,7 +64,7 @@
     width: 100%;
     opacity: 0;
     transition: .5s ease;
-    background-color: gray;
+    background-color: #f5f5f5;
 }
 .cover img{
     cursor: pointer;
@@ -69,40 +81,232 @@
 }
 
 .botonyoutube{
-    margin-top: 5%;
-    margin-left: 27%;
+    margin-top: 15%;
+    margin-left: 32%;
+    background-color: red;
+    border-color: white;
+    border-radius: 4px;
 }
-
-
-.modal-dialog {
-    max-width: 1000px;
-    margin: 110px auto 30px;
-}
-
-
-
-.modal-body {
-    position:relative;
-    padding:0px;
-}
-.close {
-    position:absolute;
-    right:-30px;
-    top:0;
-    z-index:999;
-    font-size:2rem;
-    font-weight: normal;
-    color: red;
-    opacity:1;
+.botonyoutube:hover{
+    background-color: white;
+    border-color: red;
     cursor: pointer;
+    color:red;
+    border-radius: 4px;
 }
 
-.backdrop {
-    position: absolute;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    background: black;
-    opacity: 0.8;
+button:hover{
+    -webkit-box-shadow: 0 0 51px 4px rgba(255,255,255,1);
+    -moz-box-shadow: 0 0 51px 4px rgba(255,255,255,1);
+    box-shadow: 0 0 51px 4px rgba(255,255,255,1);
+    cursor:pointer;
 }
+
+.boton2{
+    color:white!important;
+    background-color: green!important;
+    margin-left: 40%!important;
+}
+
+.image-top {
+    /*
+    max-width: inherit!important;
+    text-align: center;
+    */
+    /*display: flex;
+    flex-wrap: wrap;*/
+}
+
+.form-control{
+    border: 2px solid!important;
+}
+
+@media
+only screen and (-webkit-min-device-pixel-ratio: 2),
+only screen and (   min--moz-device-pixel-ratio: 2),
+only screen and (     -o-min-device-pixel-ratio: 2/1),
+only screen and (        min-device-pixel-ratio: 2),
+only screen and (                min-resolution: 192dpi),
+only screen and (                min-resolution: 2dppx) {
+    .hipster {
+    }
+}
+
+body {
+    font-family: 'Dosis', sans-serif;
+    background: #fafafa;
+}
+
+p {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.1em;
+    font-weight: 300;
+    line-height: 1.7em;
+    color: #999;
+
+}
+
+a, a:hover, a:focus {
+    color: inherit;
+    text-decoration: none;
+    transition: all 0.3s;
+}
+
+.navbar {
+    padding: 15px 10px;
+    background: #fff;
+    border: none;
+    border-radius: 0;
+    margin-bottom: 40px;
+    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.navbar-btn {
+    box-shadow: none;
+    outline: none !important;
+    border: none;
+}
+
+.line {
+    width: 100%;
+    height: 1px;
+    border-bottom: 1px dashed #ddd;
+    margin: 40px 0;
+}
+
+i, span {
+    display: inline-block;
+}
+
+/* ---------------------------------------------------
+    SIDEBAR STYLE
+----------------------------------------------------- */
+
+/*#fh5co-aside #fh5co-main-menu ul {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+}
+@media screen and (max-width: 768px) {
+    #fh5co-aside #fh5co-main-menu ul {
+        margin: 0 0 2em 0;
+    }
+}
+#fh5co-aside #fh5co-main-menu ul li {
+    margin: 0 0 20px 0;
+    padding: 0;
+    list-style: none;
+}
+#fh5co-aside #fh5co-main-menu ul li a {
+    color: rgba(0, 0, 0, 0.9);
+    text-decoration: none;
+    !*letter-spacing: .1em;*!
+    text-transform: uppercase;
+    font-size: 13px;
+    font-weight: 600;
+    position: relative;
+    padding: 10px 10px;
+    letter-spacing: .2em;
+    font-family: "Dosis", sans-serif;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+#fh5co-aside #fh5co-main-menu ul li a:after {
+    content: "";
+    position: absolute;
+    height: 2px;
+    bottom: 7px;
+    left: 10px;
+    right: 10px;
+    background-color: #228896;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    -moz-transform: scaleX(0);
+    -ms-transform: scaleX(0);
+    -o-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -moz-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -ms-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    -o-transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+#fh5co-aside #fh5co-main-menu ul li a:hover {
+    text-decoration: none;
+    color: black;
+}
+#fh5co-aside #fh5co-main-menu ul li a:hover:after {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    -moz-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    -o-transform: scaleX(1);
+    transform: scaleX(1);
+}
+#fh5co-aside #fh5co-main-menu ul li.fh5co-active a {
+    color: black;
+}
+#fh5co-aside #fh5co-main-menu ul li.fh5co-active a:after {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    -moz-transform: scaleX(1);
+    -ms-transform: scaleX(1);
+    -o-transform: scaleX(1);
+    transform: scaleX(1);
+}
+
+#fh5co-main {
+    width: 80%;
+    float: right;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+}
+@media screen and (max-width: 1200px) {
+    #fh5co-main {
+        width: 70%;
+    }
+}
+@media screen and (max-width: 768px) {
+    #fh5co-main {
+        width: 100%;
+    }
+}
+#fh5co-main .fh5co-narrow-content {
+    position: relative;
+    width: 93%;
+    margin: 0 auto;
+    padding: 4em 0;
+    clear: both;
+}
+@media screen and (max-width: 768px) {
+    #fh5co-main .fh5co-narrow-content {
+        width: 100%;
+        padding: 4em 1em;
+    }
+}*/
+
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+#fh5co-main {
+    /*padding-left: 10%;*/
+    width: 90%;
+    float: left;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
+}
+@media screen and (max-width: 1200px) {
+    #fh5co-main {
+        width: 70%;
+    }
+}
+@media screen and (max-width: 768px) {
+    #fh5co-main {
+        width: 100%;
+    }
+}
+
+
