--- a/src/main/webapp/app/pages/pageconciertos/pages.component.html
+++ b/src/main/webapp/app/pages/pageconciertos/pages.component.html
@@ -1,21 +1,13 @@
-<div class="fondo">
-    <br>
-    <h2 style="text-align: center"><span data-translate="rockbible3App.pageconciertos.pages.title">Mis Conciertos</span></h2>
-    <hr>
-    <jhi-alert-error></jhi-alert-error>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<div>
+    <div class="fondo">
+        <br>
+        <h2 style="text-align: center"><span data-translate="rockbible3App.pageconciertos.pages.title">Mis Conciertos</span></h2>
+        <br>
+        <jhi-alert-error></jhi-alert-error>
+    </div>
+    <div id="fh5co-main">
+        <div class="container-fluid">
+            <div class="col-sm-12"></div>
+        </div>
+    </div>
 </div>
