--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -1,83 +1,16 @@
-<div class="fondo">
-    <hr>
+<div>
     <jhi-alert-error></jhi-alert-error>
-
-
-    <div class="wrapper">
-        <!-- Sidebar Holder -->
-        <nav id="sidebar" class="active">
-            <ul class="list-unstyled components">
-                <li class="active">
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false">
-                        <i class="glyphicon glyphicon-home"></i>
-                        Home
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="glyphicon glyphicon-user"></i>
-                        Perfil
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <i class="glyphicon glyphicon-search"></i>
-                        Buscar canción
-                    </a>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false">
-                        <i class="glyphicon glyphicon-link"></i>
-                        Mi colección
-                    </a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li><a href="#">Artista</a></li>
-                        <li><a href="#">Canción</a></li>
-                    </ul>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <i class="glyphicon glyphicon-music"></i>
-                        Music
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="glyphicon glyphicon-star"></i>
-                        Artistas
-                    </a>
-                </li>
-
-                <li>
-                    <a href="#">
-                        <i class="glyphicon glyphicon-cog"></i>
-                        Ajustes
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <i class="glyphicon glyphicon-send"></i>
-                        Contacto
-                    </a>
-                </li>
-            </ul>
-
-            <ul class="list-unstyled CTAs">
-                <li><a href="https://bootstrapious.com/tutorial/files/sidebar.zip" class="download">Download source</a></li>
-                <li><a href="https://bootstrapious.com/p/bootstrap-sidebar" class="article">Back to article</a></li>
-            </ul>
-        </nav>
-
+        <div class="fondo">
         <!-- Page Content Holder -->
-        <div id="content">
-            <div class="col-10">
-                <div class="col-sm-12">
+        <div id="fh5co-main">
+            <div class="row">
+                <div class="col-sm-12 buscador">
+                    <br>
                     <input type="text" (keyup.enter)="searchSong()" [(ngModel)]="search" class="buscador" placeholder="Buscar artista o canción">
                     <button class="btn btn-primary"  (click)="searchSong()"><span class="glyphicon glyphicon-search"></span></button>
-
                 </div><br>
                 <div class="row">
-                    <div class="col-sm-12" style="text-align: center"><h1><span class="glyphicon glyphicon-search"></span> Búsquedas</h1></div>
+                    <div class="col-lg-10" style="text-align: center"><h1><span class="glyphicon glyphicon-search"></span> Búsquedas</h1></div>
                 </div>
                 <div class="row">
                     <div *ngFor="let search of DataSearch" class="infoDiv col-lg-3 col-md-4 col-sm-6">
@@ -100,11 +33,11 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-sm-12" style="text-align: center"><h1><span class="glyphicon glyphicon-music"></span> Top Canciones</h1></div>
+                    <div class="col-sm-12 col-lg-12" style="text-align: center"><h1><span class="glyphicon glyphicon-music"></span> Top Canciones</h1></div>
                 </div>
                 <div class="row">
                     <div *ngFor="let data of DataTopTracks" class="infoDiv col-lg-3 col-md-4 col-sm-6 image-top">
-                        <div class="cover" [style.background-image]="sanitizeImage(data.albumId)">
+                        <div class="cover img-responsive" [style.background-image]="sanitizeImage(data.albumId)">
                             <div class="overlayInfo">
                                 <div>
                                     <img id="{{data.id}}" (click)="like(data.id)" alt="vacio"
@@ -135,18 +68,12 @@
                         </div>
                     </div>
                     <br>
-
                     <br>
-
-                    -->
                 </div>
                 <div class="row">
-                    <div class="col-sm-12" style="text-align: center"><h1><span class="glyphicon glyphicon-star"></span> Top Artistas</h1></div>
-
+                    <div class="col-md-12" style="text-align: center"><h1><span class="glyphicon glyphicon-star"></span> Top Artistas</h1></div>
                 </div>
-
             </div>
         </div>
-
-    </div>
+        </div>
 </div>
