--- a/src/main/webapp/app/pages/pagesong/pagesong.css
+++ b/src/main/webapp/app/pages/pagesong/pagesong.css
@@ -1,55 +1,39 @@
+/* ---------------------------------------------------
+    CONTENT HEADER
+----------------------------------------------------- */
 .fondo{
+    margin-left: 17%;
+    width: 83%;
     background-size: cover;
-    /*background-image: url("../../../content/images/fondoTopTracks.jpg");*/
-    background: linear-gradient(to bottom right, white, #409cff);
+    background: linear-gradient(#33b7ff,#020d1c);
 }
 
-.cover {
-    /* imagenes de los discos*/
-    background-size: cover;
-    width: 200px;
-    height: 200px;
-    display: inline-block;
-    margin: 10px;
-    border: 2px solid #151515;
-    position: relative;
-}
-.audio{
-    align-content: center;
-    margin-top: 22%;
-    width: 100%;
+h2{
+    color:white!important;
 }
 
-.tituloSong{
-    color: white;
-    font-family: 'Dosis', sans-serif;
-    font-size: 20px;
-    position: relative;
-    text-align: center;
+/* ---------------------------------------------------
+    CONTENT STYLE
+----------------------------------------------------- */
+#fh5co-main {
+    width: 83%;
+    float: right;
+    -webkit-transition: 0.5s;
+    -o-transition: 0.5s;
+    transition: 0.5s;
 }
-
-.overlayInfo {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: gray;
+.container-fluid {
+    min-height: 475px;
+    background: linear-gradient(#33b7ff,#020d1c);
+    background-size: auto;
 }
-.cover img{
-    /* imagenes del fondo los discos*/
-    cursor: pointer;
-    width: 65px;
-    height: 65px;
-    margin-left: 35%;
-    display: inline-block;
-    margin-top: 25%;
+@media screen and (max-width: 1200px) {
+    #fh5co-main {
+        width: 70%;
+    }
 }
-
-.cover:hover .overlayInfo{
-    opacity: 0.9;
+@media screen and (max-width: 768px) {
+    #fh5co-main {
+        width: 100%;
+    }
 }
