--- a/src/main/webapp/app/pages/pageartist/pages.css
+++ b/src/main/webapp/app/pages/pageartist/pages.css
@@ -15,6 +15,8 @@
 
 h1{
     color:white!important;
+    font-size: 2em!important;
+    display:inline-block!important;
 }
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
     color: grey;
@@ -184,6 +186,7 @@ a, a:hover, a:focus {
 i, span {
     display: inline-block;
 }
+
 
 /* ---------------------------------------------------
     SIDEBAR STYLE
