--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -346,7 +346,7 @@
             </ul>
         </nav>
         <div class="fh5co-footer">
-            <p><small>&copy; 2018 PuigTheSong. All Rights Reserved.</span> <span>Designed by <a href="" target="_blank">Julio/Borja/Bryan/Javier/Llauna</a></span> <span>Demo Images: <a href="" target="_blank">Unsplash</a></span></small></p>
+            <p><small>&copy; 2018 PuigTheSong. All Rights Reserved.</span> <span>Designed by <a href="" target="_blank">Julio/Borja/Bryan/Javier<br>Llauna</a></span> <span>Demo Images: <a href="" target="_blank">Unsplash</a></span></small></p>
             <ul>
                 <li><a href="#"><i class="icon-facebook2"></i></a></li>
                 <li><a href="#"><i class="icon-twitter2"></i></a></li>
