--- a/src/main/webapp/app/pages/pagehome/phome.css
+++ b/src/main/webapp/app/pages/pagehome/phome.css
@@ -8,6 +8,8 @@
 .fondo{
     background-size: cover;
     background: linear-gradient(#020d1c,#020d1c);
+    float:right!important;
+    width:90%!important;
 }
 
 .row{
@@ -370,17 +372,6 @@ a.article, a.article:hover {
     transition: 0.5s;
     background: linear-gradient(#33b7ff,#020d1c);
 
-}
-
-@media screen and (max-width: 1200px) {
-    #fh5co-main {
-        width: 70%;
-    }
-}
-@media screen and (max-width: 768px) {
-    #fh5co-main {
-        width: 100%;
-    }
 }
 
 
