--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -313,7 +313,7 @@
 <!-- Sidebar-->
 <!--<nav class="navbar navbar-dark navbar-expand-md jh-navbar">-->
     <aside  id="fh5co-aside" role="complementary" class="border js-fullheight">
-        <h1 id="fh5co-logo"><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">PuigTheSong</a></h1>
+        <h1 id="fh5co-logo"><img src="../../../content/images/logo.png" height="60" width="60"/></h1>
         <nav id="fh5co-main-menu" role="navigation">
             <ul>
                 <li class="fh5co">
@@ -323,14 +323,14 @@
                     </a>
                 </li>
                 <li class="fh5co">
-                    <a routerLink="pageartist-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                        <i class="fa fa-star-half-full" aria-hidden="true"></i>&nbsp;
+                    <a routerLink="pagesong-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                        <i class="fa fa-song" aria-hidden="true"></i>&nbsp;
                         <span jhiTranslate="global.menu.pagesong-pages">Song</span>
                     </a>
                 </li>
                 <li class="fh5co">
-                    <a routerLink="pagesong-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
-                        <i class="fa fa-star-half-full" aria-hidden="true"></i>&nbsp;
+                    <a routerLink="pageartist-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                        <i class="fa fa-star" aria-hidden="true"></i>&nbsp;
                         <span jhiTranslate="global.menu.pageartist-pages">Pageartist Pages</span>
                     </a>
                 </li>
@@ -341,12 +341,14 @@
                     </a>
                 </li>
 
-                <li class="fh5co"><a (click)="login()" id="login">Sign in</a></li>
-                <li class="fh5co"><a routerLink="register">Register</a></li>
+                <li class="fh5co"><a (click)="login()" id="login"><i class="fa fa-user" aria-hidden="true"></i> Sign in</a>
+
+                </li>
+
             </ul>
         </nav>
         <div class="fh5co-footer">
-            <p><small>&copy; 2018 PuigTheSong. All Rights Reserved.</span> <span>Designed by <a href="" target="_blank">Julio/Borja/Bryan/Javier<br>Llauna</a></span> <span>Demo Images: <a href="" target="_blank">Unsplash</a></span></small></p>
+            <p><small>&copy; 2018 PuigTheSong. All Rights Reserved.</span> <span>Designed by <a href="" target="_blank">Julio/Borja/Bryan/Javier<br>Llauna</a></span></p>
             <ul>
                 <li><a href="#"><i class="icon-facebook2"></i></a></li>
                 <li><a href="#"><i class="icon-twitter2"></i></a></li>
