close añadido en el signin

--- a/src/main/webapp/app/shared/login/login.component.html
+++ b/src/main/webapp/app/shared/login/login.component.html
@@ -1,7 +1,9 @@
 <div class="modal-header">
     <div class="logo">
         <img src="../../../content/images/logo.png" height="225" width="225"/>
+
     </div>
+    <button id="close" aria-label="Close" data-dismiss="modal" class="close" type="button" (click)="activeModal.dismiss('closed')"><span aria-hidden="true">x</span></button>
 </div>
 <div class="body">
 <ngb-tabset>
