--- a/src/main/webapp/app/pages/pageconciertos/pages.component.html
+++ b/src/main/webapp/app/pages/pageconciertos/pages.component.html
@@ -7,7 +7,23 @@
     </div>
     <div id="fh5co-main">
         <div class="container-fluid">
-            <div class="col-sm-12"></div>
+            <div class="col-sm-12">
+                sdmspof
+                dfmdòmfds
+                ds
+                fd
+
+                fdfd
+                df
+
+                <br>
+                d
+                d
+                f
+                ddf
+                df
+
+            </div>
         </div>
     </div>
 </div>
