--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -341,7 +341,7 @@
                     </a>
                 </li>
 
-                <li class="fh5co"><a (click)="login()" id="login"><i class="fa fa-user-circle" aria-hidden="true"></i> Sign in</a>
+                <li class="fh5co"><a (click)="login()" id="login"><i class="fa fa-user-circle" aria-hidden="true"></i> <span> Sign in </span></a>
 
                 </li>
 
