Añadido pagina tendencias para seleccionar top 10 (by Julio & Llauna)

--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -323,13 +323,13 @@
                     </a>
                 </li>
                 <li class="fh5co">
-                    <a routerLink="pagesong-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                    <a routerLink="pageartist-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                         <i class="fa fa-music" aria-hidden="true"></i>&nbsp;
                         <span jhiTranslate="global.menu.pagesong-pages">Song</span>
                     </a>
                 </li>
                 <li class="fh5co">
-                    <a routerLink="pageartist-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
+                    <a routerLink="pagesong-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                         <i class="fa fa-star" aria-hidden="true"></i>&nbsp;
                         <span jhiTranslate="global.menu.pageartist-pages">Pageartist Pages</span>
                     </a>
@@ -348,7 +348,7 @@
             </ul>
         </nav>
         <div class="fh5co-footer">
-            <p><small>&copy; 2018 <b>PuigTheSong.</b> All Rights Reserved.</span> <span>Designed by <a href="" target="_blank">Julio/Borja/Bryan/Javier<br>Llauna</a></span></p>
+            <p><small>&copy; 2018 <b>PuigTheSong.</b> All Rights Reserved.</small> <span>Designed by <a href="" target="_blank">Julio/Borja/Bryan<br>Javier/Llauna</a></span></p>
             <ul>
                 <li><a href="#"><i class="icon-facebook2"></i></a></li>
                 <li><a href="#"><i class="icon-twitter2"></i></a></li>
