--- a/src/main/webapp/app/pages/pagesong/pages.component.html
+++ b/src/main/webapp/app/pages/pagesong/pages.component.html
@@ -1,7 +1,7 @@
 <div>
     <div class="fondo">
         <br>
-        <h2 style="text-align: center"><span data-translate="rockbible3App.pagesong.pages.title">Mis Canciones</span></h2>
+        <h2 style="text-align: center"><span data-translate="rockbible3App.pagesong.pages.title">Mis Artistas</span></h2>
         <br>
         <jhi-alert-error></jhi-alert-error>
     </div>
