--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -1,3 +1,57 @@
+<div class="picture-grid">
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Alemania/alemania.jpg" style="width: 100%; height: 100%;"  />
+        <div class="mascara">
+            <a href="#" class="link">Alemania</a>
+        </div>
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Argentina/argentina.jpg" style="width: 100%; height: 100%;"  />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Belgica/belgica.jpg" style="width: 100%; height: 100%;" />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Brasil/brasil.jpg" style="width: 100%; height: 100%;" />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Colombia/colombia.jpg" style="width: 100%; height: 100%;" />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/EEUU/EEUU.jpg" style="width: 100%; height: 100%;" />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/España/españa.jpg" style="width: 100%; height: 100%;" />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Francia/francia.jpg" style="width: 100%; height: 100%;" />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Grecia/grecia.jpg" style="width: 100%; height: 100%;" />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Holanda/holanda.jpg" style="width: 100%; height: 100%;" />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Italia/italia.jpg" style="width: 100%; height: 100%;" />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Mexico/mexico.jpg" style="width: 100%; height: 100%;" />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Portugal/portugal.jpg" style="width: 100%; height: 100%;" />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Reino Unido/reino_unido.jpg" style="width: 100%; height: 100%;" />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Suecia/suecia.jpg" style="width: 100%; height: 100%;" />
+    </div>
+    <div class="grid-box" style="width: 100%; height: 100%;">
+        <img src="../../../content/images/Paises_Foto/Suiza/suiza.jpg" style="width: 100%; height: 100%;" />
+    </div>
+</div>
+
 <div>
     <jhi-alert-error></jhi-alert-error>
         <div class="fondo">
