--- a/src/main/webapp/app/pages/pagehome/phome.css
+++ b/src/main/webapp/app/pages/pagehome/phome.css
@@ -1,15 +1,13 @@
 /*
     DEMO STYLE
 */
-@import "https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700";
 
-
-@import url("//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css");
 .fondo{
     background-size: cover;
     background: linear-gradient(#020d1c,#020d1c);
     float:right!important;
     width:90%!important;
+    display: none;
 }
 
 .row{
@@ -448,3 +446,29 @@ a.article, a.article:hover {
         display: none;
     }
 }
+
+/* CUADRO SELECCION */
+
+    body {
+        width: 100%;
+        height: 100%;
+        /*margin: 0;*/
+        padding: 0;
+        margin-left: 20%;
+        /*padding-left:30%;*/
+     }
+
+    .picture-grid {
+        padding-top: 5%;
+        padding-left: 10%;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+        justify-items: center;
+        grid-gap: 0;
+        grid-row-gap: 0;
+    }
+
+    .grid-box img{
+        width: 100%;
+    }
+
