Añadido cambio de rutas - (by Julio & Llauna)

--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -1,15 +1,13 @@
 <div class="picture-grid">
     <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Alemania/alemania.jpg" style="width: 100%; height: 100%;"  />
-        <div class="mascara">
-            <a href="#" class="link">Alemania</a>
-        </div>
+        <img src="../../../content/images/Paises_Foto/Alemania/alemania.jpg" style="width: 100%; height: 100%;" />
+        <div class="box-info">Alemania</div>
     </div>
     <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Argentina/argentina.jpg" style="width: 100%; height: 100%;"  />
+        <img src="../../../content/images/Paises_Foto/Argentina/argentina.jpg" style="width: 100%; height: 100%;" />
     </div>
     <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Belgica/belgica.jpg" style="width: 100%; height: 100%;" />
+        <img src="../../../content/images/Paises_Foto/Belgica/belgica.jpg"style="width: 100%; height: 100%;" />
     </div>
     <div class="grid-box" style="width: 100%; height: 100%;">
         <img src="../../../content/images/Paises_Foto/Brasil/brasil.jpg" style="width: 100%; height: 100%;" />
