Añadida imagenes con hover de los paises

--- a/src/main/webapp/app/pages/pagehome/phome.component.html
+++ b/src/main/webapp/app/pages/pagehome/phome.component.html
@@ -1,52 +1,115 @@
 <div class="picture-grid">
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Alemania/alemania.jpg" style="width: 100%; height: 100%;" />
-        <div class="box-info">Alemania</div>
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('alemania')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>ALEMANIA</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Argentina/argentina.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('argentina')">
+        <div class="overlayInfo">
+            <div  class="nombre">
+                <a>ARGENTINA</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Belgica/belgica.jpg"style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('belgica')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>Belgica</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Brasil/brasil.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('brasil')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>BRASIL</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Colombia/colombia.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('colombia')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>COLOMBIA</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/EEUU/EEUU.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('eeuu')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>ESTADOS UNIDOS</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/España/españa.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('espana')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>ESPAÑA</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Francia/francia.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('francia')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>FRANCIA</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Grecia/grecia.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('grecia')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>GRECIA</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Holanda/holanda.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('holanda')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>HOLANDA</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Italia/italia.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('italia')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>ITALIA</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Mexico/mexico.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('mexico')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>MEXICO</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Portugal/portugal.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('portugal')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>PORTUGAL</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Reino Unido/reino_unido.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('reino_unido')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>REINO UNIDO</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Suecia/suecia.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('suecia')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>SUECIA</a>
+            </div>
+        </div>
     </div>
-    <div class="grid-box" style="width: 100%; height: 100%;">
-        <img src="../../../content/images/Paises_Foto/Suiza/suiza.jpg" style="width: 100%; height: 100%;" />
+    <div class="paises img-responsive" [style.background-image]="sanitizeImageCountry('suiza')">
+        <div class="overlayInfo">
+            <div class="nombre">
+                <a>SUIZA</a>
+            </div>
+        </div>
     </div>
 </div>
 
