--- a/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
+++ b/src/main/webapp/app/account/password-reset/init/password-reset-init.component.html
@@ -1,7 +1,7 @@
-<div>
+<div id="fondob">
     <div class="row justify-content-center">
         <div class="col-md-8">
-            <h1 jhiTranslate="reset.request.title">Reset your password</h1>
+            <h1 jhiTranslate="reset.request.title">Reset your password</h1><br>
 
             <div class="alert alert-danger" jhiTranslate="reset.request.messages.notfound" *ngIf="errorEmailNotExists">
                 <strong>Email address isn't registered!</strong> Please check and try again.
@@ -15,7 +15,6 @@
 
             <form *ngIf="!success" name="form" role="form" (ngSubmit)="requestReset()" #resetRequestForm="ngForm">
                 <div class="form-group">
-                    <label class="form-control-label" for="email" jhiTranslate="global.form.email">Email</label>
                     <input type="email" class="form-control" id="email" name="email" placeholder="{{'global.form.email.placeholder' | translate}}"
                            [(ngModel)]="resetAccount.email" minlength=5 maxlength=100 #emailInput="ngModel" email required>
                     <div *ngIf="emailInput.dirty && emailInput.invalid">
