--- a/src/main/webapp/app/account/password-reset/init/password-reset-init.css
+++ b/src/main/webapp/app/account/password-reset/init/password-reset-init.css
@@ -1,7 +1,7 @@
 .boton2{
     color:white!important;
     background-color: green!important;
-    margin-left: 40%!important;
+    margin-left: 55%!important;
 }
 
 button:hover {
@@ -32,9 +32,38 @@ label{
     font-family: "Comic Sans MS", cursive, sans-serif;
     font-style: italic!important;
     font-size: 14px!important;
+    margin-left:16%!important;
 }
 
 h1{
     color:white!important;
+    margin-left:38%!important;
 
+
+}
+
+#fondob{
+    background-color: black!important;
+}
+
+
+@media (max-width: 700px) {
+    .form-control{
+        margin-left: 50px!important;
+    }
+
+}
+
+@media (max-width: 600px) {
+    .form-control{
+        margin-left: 50px!important;
+    }
+
+}
+@media (max-width: 768px) {
+
+    .form-control{
+        margin-left: 129px!important;
+        width: 82%!important;
+    }
 }
