--- a/src/main/webapp/app/account/register/register.component.html
+++ b/src/main/webapp/app/account/register/register.component.html
@@ -1,4 +1,4 @@
-<div>
+<div id="fondos">
     <div class="row justify-content-center">
         <div class="col-md-8">
 
@@ -24,7 +24,9 @@
         </div>
     </div>
     <div class="row justify-content-center">
-        <div class="col-md-4">
+
+
+        <div class="col-md-4"><h1>REGISTER</h1>
             <form name="form" role="form" (ngSubmit)="register()" #registerForm="ngForm" *ngIf="!success">
                 <div class="form-group">
                     <label class="form-control-label" for="login" jhiTranslate="global.form.username">Username</label>
