--- a/src/main/webapp/app/layouts/navbar/navbar.component.html
+++ b/src/main/webapp/app/layouts/navbar/navbar.component.html
@@ -313,7 +313,7 @@
 <!-- Sidebar-->
 <!--<nav class="navbar navbar-dark navbar-expand-md jh-navbar">-->
     <aside  id="fh5co-aside" role="complementary" class="border js-fullheight">
-        <h1 id="fh5co-logo"><img src="../../../content/images/logo.png" height="60" width="60"/></h1>
+        <a href="/"> <h1 id="fh5co-logo"><img src="../../../content/images/logo.png" height="60" width="60"/></h1></a>
         <nav id="fh5co-main-menu" role="navigation">
             <ul>
                 <li class="fh5co">
@@ -325,13 +325,13 @@
                 <li class="fh5co">
                     <a routerLink="pageartist-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                         <i class="fa fa-music" aria-hidden="true"></i>&nbsp;
-                        <span jhiTranslate="global.menu.pagesong-pages">Song</span>
+                        <span>SONG</span>
                     </a>
                 </li>
                 <li class="fh5co">
                     <a routerLink="pagesong-pages" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" (click)="collapseNavbar()">
                         <i class="fa fa-star" aria-hidden="true"></i>&nbsp;
-                        <span jhiTranslate="global.menu.pageartist-pages">Pageartist Pages</span>
+                        <span>ARTISTAS</span>
                     </a>
                 </li>
                 <li class="fh5co">
@@ -348,7 +348,7 @@
             </ul>
         </nav>
         <div class="fh5co-footer">
-            <p><small>&copy; 2018 <b>PuigTheSong.</b> All Rights Reserved.</small> <span>Designed by <a href="" target="_blank">Julio/Borja/Bryan<br>Javier/Llauna</a></span></p>
+            <p><small>&copy; 2018 <b>PuigTheSong.</b> All Rights Reserved.</span> <span>Designed by <a href="" target="_blank">Julio/Borja/Bryan/Javier<br>Llauna</a></span></p>
             <ul>
                 <li><a href="#"><i class="icon-facebook2"></i></a></li>
                 <li><a href="#"><i class="icon-twitter2"></i></a></li>
