--- a/src/main/webapp/app/layouts/navbar/navbar.css
+++ b/src/main/webapp/app/layouts/navbar/navbar.css
@@ -13,8 +13,8 @@
     width: 12%;
     position: fixed;
     bottom: 0;
-    top: 0;
     left: 0;
+    top: 0;
     z-index: 1001;
     -webkit-transition: 0.5s;
     -o-transition: 0.5s;
@@ -41,13 +41,46 @@
     }
 
     img{
-        width: 40px;
-        height: 40px;
+        width: 50px;
+        height: 50px;
     }
     small{
         font-size: 63%!important;
     }
+    #fh5co-aside{
+        font-size: 6px!important;
+    }
+
+    .buscador{
+        width:400px!important;
+    }
 }
+
+
+@media screen and (max-width: 250px) {
+
+    span{
+        display:none!important;
+
+    }
+
+    b{
+        font-size: 3px!important;
+    }
+
+    img{
+        width: 30px;
+        height: 30px;
+    }
+    small{
+        font-size: 53%!important;
+    }
+
+    #fh5co-aside{
+        font-size: 4px!important;
+    }
+}
+
 
 
 
@@ -148,7 +181,7 @@
 #fh5co-aside .fh5co-footer {
     position: relative;
     bottom: -60px;
-    font-size: 12px;
+    font-size: 8px;
     text-align: center;
     width: 100%;
     font-weight: 400;
